--- a/app/src/main/res/layout/fragment_cricket_dashboard.xml
+++ b/app/src/main/res/layout/fragment_cricket_dashboard.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/abc_action_bar_content_inset_material"
         >
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,44 +18,51 @@
             android:orientation="horizontal"
             android:background="#fff">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/bet"
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                >
+                android:orientation="horizontal"
+                android:background="#fff">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:id="@+id/bet"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/orangeleaf" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Bet"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"
+                    android:textColor="#000"
+                    android:layout_marginTop="50dp"
+                    android:textSize="16sp"
                     />
-            </android.support.v7.widget.CardView>
-            <android.support.v7.widget.CardView
-                android:id="@+id/history"
+        </RelativeLayout>
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="#fff">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:id="@+id/history"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/yellowleaf" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Today's History"
+                    android:text="Today's \nHistory"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
-            </android.support.v7.widget.CardView>
+                    android:textColor="#000"
+                    android:layout_marginTop="40dp"
+                    android:textSize="16sp"/>
+           </RelativeLayout>
 
         </LinearLayout>
 
@@ -66,42 +72,50 @@
             android:orientation="horizontal"
             android:background="#fff">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/accounts"
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="#fff">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:id="@+id/accounts"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/greenleaf" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="My Accounts"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
-            </android.support.v7.widget.CardView>
-            <android.support.v7.widget.CardView
-                android:id="@+id/previous_game_rslt"
+                    android:textColor="#000"
+                    android:layout_marginTop="50dp"
+                    android:textSize="16sp"/>
+           </RelativeLayout>
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="#fff">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:id="@+id/previous_game_rslt"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/maroonleaf" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Results"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
-            </android.support.v7.widget.CardView>
+                    android:textColor="#000"
+                    android:layout_marginTop="50dp"
+                    android:textSize="16sp"/>
+         </RelativeLayout>
 
         </LinearLayout>
 
@@ -111,42 +125,50 @@
             android:orientation="horizontal"
             android:background="#fff">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/upcoming"
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="#fff">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:id="@+id/upcoming"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/orangeleaf" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Matches"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
-            </android.support.v7.widget.CardView>
-            <android.support.v7.widget.CardView
-                android:id="@+id/cancel_bet"
+                    android:textColor="#000"
+                    android:layout_marginTop="50dp"
+                    android:textSize="16sp"/>
+           </RelativeLayout>
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="#fff">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:id="@+id/cancel_bet"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/yellowleaf" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Cancel Bet"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
-            </android.support.v7.widget.CardView>
+                    android:textColor="#000"
+                    android:layout_marginTop="50dp"
+                    android:textSize="16sp"/>
+           </RelativeLayout>
 
         </LinearLayout>
         <LinearLayout
@@ -156,18 +178,18 @@
             android:background="#fff">
 
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/cnclld_bets"
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-
-                >
+                android:orientation="horizontal"
+                android:background="#fff">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:id="@+id/cnclld_bets"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/greenleaf" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -175,27 +197,33 @@
                     android:text="Cancelled Bets"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
+                    android:textColor="#000"
+                    android:layout_marginTop="50dp"
+                    android:textSize="16sp"/>
 
-            </android.support.v7.widget.CardView>
-            <android.support.v7.widget.CardView
-                android:id="@+id/score_crd"
+          </RelativeLayout>
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="#fff">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:id="@+id/score_crd"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/maroonleaf" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Score Card"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
-            </android.support.v7.widget.CardView>
+                    android:textColor="#000"
+                    android:layout_marginTop="50dp"
+                    android:textSize="16sp"/>
+          </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 
