--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
-    android:background="@drawable/time_is_money"
     android:descendantFocusability="beforeDescendants"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_login"
@@ -35,7 +34,7 @@
                     android:id="@+id/username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="#fff"
+                    android:textColor="#000"
                     android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
@@ -47,7 +46,7 @@
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="#fff"
+                    android:textColor="#000"
                     android:inputType="textPassword"
                     android:singleLine="true"
                     />
