--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -11,15 +11,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/abc_action_bar_content_inset_material"
+
         >
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2">
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="horizontal"
             android:background="#fff">
 
-            <android.support.v7.widget.CardView
+          <!--  <android.support.v7.widget.CardView
                 android:id="@+id/single_bet_card"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/dashboard_menu"
@@ -29,16 +35,29 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 android:clickable="true"
                 android:layout_weight="1"
-                >
+                >-->
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:id="@+id/single_bet_card"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/orangeleaf" />
+
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="Single Bet"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"
+                    android:layout_marginTop="50dp"
+                    android:textSize="16sp"
+                    android:textColor="#000"
                     />
-            </android.support.v7.widget.CardView>
+            </RelativeLayout>
+            <!--</android.support.v7.widget.CardView>-->
+
+<!--
             <android.support.v7.widget.CardView
                 android:id="@+id/multiple_bet_card"
                 android:layout_width="0dp"
@@ -48,61 +67,85 @@
                 card_view:cardUseCompatPadding="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 android:clickable="true"
-                android:layout_weight="1">
+                android:layout_weight="1">-->
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="#fff">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:scaleType="fitXY"
+                    android:id="@+id/multiple_bet_card"
+                    android:src="@drawable/yellowleaf" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Multiple Bet"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
-            </android.support.v7.widget.CardView>
+                    android:layout_marginTop="50dp"
+                    android:textSize="16sp"
+                    android:textColor="#000"/>
+            <!--</android.support.v7.widget.CardView>-->
 
+        </RelativeLayout>
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="#fff">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/todays_history_card"
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="#fff">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:scaleType="fitXY"
+                    android:id="@+id/todays_history_card"
+                    android:src="@drawable/greenleaf" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="My Accounts"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
-            </android.support.v7.widget.CardView>
+                    android:textColor="#000"
+                    android:layout_marginTop="50dp"
+                    android:textSize="16sp"/>
+        </RelativeLayout>
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/today_summary"
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="#fff">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:scaleType="fitXY"
+                    android:id="@+id/today_summary"
+                    android:src="@drawable/maroonleaf" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Today's Summary"
+                    android:text="Today's \nSummary"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
-            </android.support.v7.widget.CardView>
+                    android:textColor="#000"
+                    android:layout_marginTop="40dp"
+                    android:textSize="16sp"/>
+        </RelativeLayout>
 
         </LinearLayout>
 
@@ -112,43 +155,55 @@
             android:orientation="horizontal"
             android:background="#fff">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/chart_card"
+
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="#fff">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:scaleType="fitXY"
+                    android:id="@+id/chart_card"
+                    android:src="@drawable/orangeleaf" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Chart"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
-            </android.support.v7.widget.CardView>
+                    android:textColor="#000"
+                    android:layout_marginTop="50dp"
+                    android:textSize="16sp"/>
+           </RelativeLayout>
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/cancel_card"
+
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="#fff">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:scaleType="fitXY"
+                    android:id="@+id/cancel_card"
+                    android:src="@drawable/yellowleaf" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Cancel Bet"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
-            </android.support.v7.widget.CardView>
+                    android:textColor="#000"
+                    android:layout_marginTop="50dp"
+                    android:textSize="16sp"/>
+   </RelativeLayout>
 
 
         </LinearLayout>
@@ -158,46 +213,55 @@
             android:orientation="horizontal"
             android:background="#fff">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/termcondition"
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                >
+                android:orientation="horizontal"
+                android:background="#fff">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:scaleType="fitXY"
+                    android:id="@+id/termcondition"
+                    android:src="@drawable/greenleaf" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Term &amp; condition"
+                    android:text="Term &amp; \ncondition"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
+                    android:textColor="#000"
+                    android:layout_marginTop="40dp"
+                    android:textSize="16sp"/>
 
-            </android.support.v7.widget.CardView>
+         </RelativeLayout>
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/profile_card"
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dashboard_menu"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="2dp"
-                card_view:cardUseCompatPadding="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:layout_weight="1">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:background="#fff">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:scaleType="fitXY"
+                    android:id="@+id/profile_card"
+                    android:src="@drawable/maroonleaf" />
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Profile"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/textColorWhite"/>
-            </android.support.v7.widget.CardView>
+                    android:textColor="#000"
+                    android:layout_marginTop="50dp"
+                    android:textSize="16sp"/>
+        </RelativeLayout>
 
 
         </LinearLayout>
