--- a/app/src/main/res/layout/fragment_todays_history.xml
+++ b/app/src/main/res/layout/fragment_todays_history.xml
@@ -8,8 +8,8 @@
     android:weightSum="1">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.1"
+        android:layout_height="0dp"
+        android:layout_weight="0.05"
         android:weightSum="4"
         android:orientation="horizontal"
         android:id="@+id/topLayout">
@@ -68,8 +68,8 @@
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.8"
+        android:layout_height="0dp"
+        android:layout_weight="0.85"
         android:layout_below="@+id/view"
         android:layout_above="@+id/view2"/>
 
@@ -81,8 +81,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.1"
+        android:layout_height="0dp"
+        android:layout_weight="0.05"
         android:weightSum="3"
         android:orientation="horizontal"
         android:id="@+id/bottomLayout">
@@ -138,8 +138,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.1"
+        android:layout_height="0dp"
+        android:layout_weight="0.05"
         android:weightSum="3"
         android:orientation="horizontal"
         android:id="@+id/bottomLayout1"
