--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
 
     <style name="TextLabel" parent="TextAppearance.AppCompat">
     <!-- Hint color and label color in FALSE state -->
-    <item name="android:textColor">@color/textColorWhite</item>
+    <item name="android:textColor">#000</item>
         <item name="android:textSize">16sp</item>
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
