--- a/app/src/main/res/layout/fragment_single__bet.xml
+++ b/app/src/main/res/layout/fragment_single__bet.xml
@@ -100,8 +100,9 @@
                     android:layout_weight="1"
                     android:text="@string/first_digit"
                     android:gravity="center"
-                    android:textColor="@color/textColor"
-                    android:layout_gravity="center"/>
+                    android:textColor="#3b5998"
+                    android:layout_gravity="center"
+                    android:textStyle="bold" />
 
             </android.support.v7.widget.CardView>
         </LinearLayout>
@@ -170,11 +171,12 @@
                                 <Button
                                     android:id="@+id/btn_first_place_bet"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="40dp"
                                     android:layout_weight="1"
                                     android:text="@string/place_bet"
                                     android:gravity="center"
-                                    android:textColor="@color/textColor"
+                                    android:background="@drawable/button_border"
+                                    android:textColor="#fff"
                                     android:layout_gravity="center"/>
                                <LinearLayout
                                    android:layout_width="match_parent"
@@ -248,8 +250,9 @@
                     android:layout_weight="1"
                     android:text="@string/second_digit"
                     android:gravity="center"
-                    android:textColor="@color/textColor"
-                    android:layout_gravity="center"/>
+                    android:textColor="#3b5998"
+                    android:layout_gravity="center"
+                    android:textStyle="bold" />
 
             </android.support.v7.widget.CardView>
         </LinearLayout>
@@ -304,10 +307,11 @@
                     <Button
                         android:id="@+id/btn_second_place_bet"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:text="@string/place_bet"
                         android:gravity="center"
-                        android:textColor="@color/textColor"
+                        android:textColor="#fff"
+                        android:background="@drawable/button_border"
                         android:layout_gravity="center"/>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -383,8 +387,9 @@
                     android:layout_weight="1"
                     android:text="@string/jodi_digit"
                     android:gravity="center"
-                    android:textColor="@color/textColor"
-                    android:layout_gravity="center"/>
+                    android:textColor="#3b5998"
+                    android:layout_gravity="center"
+                    android:textStyle="bold" />
 
             </android.support.v7.widget.CardView>
           </LinearLayout>
@@ -438,11 +443,12 @@
                     <Button
                         android:id="@+id/btn_jodi_place_bet"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_weight="1"
                         android:text="@string/place_bet"
                         android:gravity="center"
-                        android:textColor="@color/textColor"
+                        android:textColor="#fff"
+                        android:background="@drawable/button_border"
                         android:layout_gravity="center"/>
                     <LinearLayout
                         android:layout_width="match_parent"
