--- a/app/src/main/res/layout/child_match_bet.xml
+++ b/app/src/main/res/layout/child_match_bet.xml
@@ -8,35 +8,21 @@
     android:paddingTop="5dp"
     android:weightSum="2">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="#fff">
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:id="@+id/score_crd"
-        android:scaleType="fitXY"
-        android:src="@drawable/greenstrip" />
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text=""
         android:hint="Name"
         android:id="@+id/txtteam"
         android:textSize="16dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
         android:textColor="#000"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text=""
         android:hint="Odds"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="320dp"
         android:id="@+id/txtodd"/>
-    </RelativeLayout>
 </LinearLayout>
