--- a/app/src/main/res/layout/fragment_cricket_dashboard.xml
+++ b/app/src/main/res/layout/fragment_cricket_dashboard.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -18,51 +18,46 @@
             android:orientation="horizontal"
             android:background="#fff">
 
-            <RelativeLayout
+            <android.support.v7.widget.CardView
+                android:id="@+id/bet"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/dashboard_menu"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="2dp"
+                card_view:cardUseCompatPadding="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                android:background="#fff">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="120dp"
-                    android:id="@+id/bet"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/orangeleaf" />
+                >
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Bet"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="#000"
-                    android:layout_marginTop="50dp"
                     android:textSize="16sp"
+                    android:textColor="@color/textColorWhite"
                     />
-        </RelativeLayout>
-            <RelativeLayout
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:id="@+id/history"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                android:background="#fff">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="120dp"
-                    android:id="@+id/history"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/yellowleaf" />
+                android:layout_height="@dimen/dashboard_menu"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="2dp"
+                card_view:cardUseCompatPadding="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_weight="1">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Today's \nHistory"
+                    android:text="Today's History"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="#000"
-                    android:layout_marginTop="40dp"
-                    android:textSize="16sp"/>
-           </RelativeLayout>
+                    android:textSize="16sp"
+                    android:textColor="@color/textColorWhite"/>
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
 
@@ -72,50 +67,44 @@
             android:orientation="horizontal"
             android:background="#fff">
 
-            <RelativeLayout
+            <android.support.v7.widget.CardView
+                android:id="@+id/accounts"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                android:background="#fff">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="120dp"
-                    android:id="@+id/accounts"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/greenleaf" />
+                android:layout_height="@dimen/dashboard_menu"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="2dp"
+                card_view:cardUseCompatPadding="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_weight="1">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="My Accounts"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="#000"
-                    android:layout_marginTop="50dp"
-                    android:textSize="16sp"/>
-           </RelativeLayout>
-            <RelativeLayout
+                    android:textSize="16sp"
+                    android:textColor="@color/textColorWhite"/>
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:id="@+id/previous_game_rslt"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                android:background="#fff">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="120dp"
-                    android:id="@+id/previous_game_rslt"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/maroonleaf" />
+                android:layout_height="@dimen/dashboard_menu"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="2dp"
+                card_view:cardUseCompatPadding="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_weight="1">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Results"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="#000"
-                    android:layout_marginTop="50dp"
-                    android:textSize="16sp"/>
-         </RelativeLayout>
+                    android:textSize="16sp"
+                    android:textColor="@color/textColorWhite"/>
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
 
@@ -125,50 +114,44 @@
             android:orientation="horizontal"
             android:background="#fff">
 
-            <RelativeLayout
+            <android.support.v7.widget.CardView
+                android:id="@+id/upcoming"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                android:background="#fff">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="120dp"
-                    android:id="@+id/upcoming"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/orangeleaf" />
+                android:layout_height="@dimen/dashboard_menu"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="2dp"
+                card_view:cardUseCompatPadding="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_weight="1">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Matches"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="#000"
-                    android:layout_marginTop="50dp"
-                    android:textSize="16sp"/>
-           </RelativeLayout>
-            <RelativeLayout
+                    android:textSize="16sp"
+                    android:textColor="@color/textColorWhite"/>
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:id="@+id/cancel_bet"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                android:background="#fff">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="120dp"
-                    android:id="@+id/cancel_bet"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/yellowleaf" />
+                android:layout_height="@dimen/dashboard_menu"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="2dp"
+                card_view:cardUseCompatPadding="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_weight="1">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Cancel Bet"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="#000"
-                    android:layout_marginTop="50dp"
-                    android:textSize="16sp"/>
-           </RelativeLayout>
+                    android:textSize="16sp"
+                    android:textColor="@color/textColorWhite"/>
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
         <LinearLayout
@@ -178,18 +161,17 @@
             android:background="#fff">
 
 
-            <RelativeLayout
+            <android.support.v7.widget.CardView
+                android:id="@+id/cnclld_bets"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/dashboard_menu"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="2dp"
+                card_view:cardUseCompatPadding="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                android:background="#fff">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="120dp"
-                    android:id="@+id/cnclld_bets"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/greenleaf" />
+                >
 
                 <TextView
                     android:layout_width="match_parent"
@@ -197,36 +179,32 @@
                     android:text="Cancelled Bets"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="#000"
-                    android:layout_marginTop="50dp"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+                    android:textColor="@color/textColorWhite"/>
 
-          </RelativeLayout>
-            <RelativeLayout
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:id="@+id/score_crd"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                android:background="#fff">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="120dp"
-                    android:id="@+id/score_crd"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/maroonleaf" />
+                android:layout_height="@dimen/dashboard_menu"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="2dp"
+                card_view:cardUseCompatPadding="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:layout_weight="1">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Score Card"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="#000"
-                    android:layout_marginTop="50dp"
-                    android:textSize="16sp"/>
-          </RelativeLayout>
+                    android:textSize="16sp"
+                    android:textColor="@color/textColorWhite"/>
+            </android.support.v7.widget.CardView>
         </LinearLayout>
     </LinearLayout>
 
-</RelativeLayout>
+</ScrollView>
 
 
