Todays history n my accounts

--- a/app/src/main/res/layout/alert_odd.xml
+++ b/app/src/main/res/layout/alert_odd.xml
@@ -62,7 +62,7 @@
             android:layout_weight="1"
             android:text=""
             android:hint="game"
-            android:textColor="#f69e32"
+            android:textColor="#c99802"
             android:textSize="18sp"
             android:layout_marginLeft="10dp"
             android:layout_gravity="center"
